Test ec2 (#1)
* updated erd

added S3

added stuff:

test

* wip

* wip2

* wip3

* new routes

* added health route

* cleanup

---------
