# src/controllers/hello.controller.ts
@@ -1,9 +1,9 @@
 import { Controller, Route, Get } from 'tsoa'
 
-@Route('/')
-export class HelloController extends Controller {
-    @Get('/hello')
-    public async hello(): Promise<string> {
-        return 'Hello, World!'
+@Route('/health')
+export class HealthController extends Controller {
+    @Get('/')
+    public async health(): Promise<string> {
+        return 'OK'
     }
 }
